# GDS-Airline-Simple

./: .gitignore  CMakeLists.txt  GdsAirlineSimpleConfig.h.in  README.md
amadeus/: AmadeusExports.cpp  AmadeusExports.h  AmadeusHttpClient.cpp  AmadeusHttpClient.h  CMakeLists.txt  Factory.cpp  Factory.h  FlightOffer.cpp  FlightOffer.h  GdsExports.h
app/: AppExports.h  CMakeLists.txt  Command.cpp  Command.h  ConfigReader.cpp  ConfigReader.h  Gds.cpp  Gds.h  GdsFactory.h  Tools.cpp  Tools.h  main.cxx
app/conf/: config.ini
gds/: CMakeLists.txt  GdsExports.h
gds/advanced/: AdvancedFunctions.h
gds/database/: Database.cpp  Database.h  Detail.cpp  Detail.h  User.cpp  User.h
gds/simple/: SimpleFunctions.h
sirena/: CMakeLists.txt  Factory.cpp  Factory.h  FlightOffer.cpp  FlightOffer.h  GdsExports.h  SirenaExports.cpp  SirenaExports.h
